[tool.poetry]
name = "uni-assignment-2021-22-number-2"
version = "0.1.0"
description = ""
authors = ["ArnasVysniauskas <81956480+ArnasVysniauskas@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.22.2"
click = "^8.0.4"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
